--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: Python Porject
+title: Python Project
 show_downloads: false
 google_analytics:
-description: Mat 10
+description: Math 10 
