--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,7 @@ title: Python Project
 google_analytics:
 description: Math 10 
 is_project_page: false
+github:
+  is_project_page: false
 
 theme: jekyll-theme-cayman
