--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Python Project ![logo](.png).
+title: Python Project ![logo](https://mrfanning.github.io/MrFanning.github.io-PythonProject/PythonL.png).
 google_analytics:
 description: Math 10 
 github:
