--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Python Project
 google_analytics:
-description: Math 10 
+description:  
 show_downloads: true
 github:
   is_project_page: false
